--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_525ecdbad9e1974b8b424c8f2_aba5f02b9d" tabindex="-1" value=""></div>
                 <div class="clear">
-                  <input type="submit" value="Find Out More" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-xl">
+                  <input type="submit" value="Find Out More" name="subscribe" class="btn btn-primary btn-xl">
                 </div>
               </div>
             </form>
