--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </style>
           <div id="mc_embed_signup">
             <form action="https://nicewebsite.us19.list-manage.com/subscribe/post?u=525ecdbad9e1974b8b424c8f2&amp;id=aba5f02b9d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div id="mc_embed_signup_scroll">
+              <div>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_525ecdbad9e1974b8b424c8f2_aba5f02b9d" tabindex="-1" value=""></div>
                 <div class="clear">
