--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
           <!-- Begin MailChimp Signup Form -->
           <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-          <style type="text/css">
+          <!-- <style type="text/css">
             #mc_embed_signup {
               clear: left;
               font: 14px Helvetica, Arial, sans-serif;
@@ -37,9 +37,9 @@
 
             /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
           	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-          </style>
-          <div id="mc_embed_signup">
-            <form action="https://nicewebsite.us19.list-manage.com/subscribe/post?u=525ecdbad9e1974b8b424c8f2&amp;id=aba5f02b9d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          </style> -->
+          <div>
+            <form action="https://nicewebsite.us19.list-manage.com/subscribe/post?u=525ecdbad9e1974b8b424c8f2&amp;id=aba5f02b9d" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_525ecdbad9e1974b8b424c8f2_aba5f02b9d" tabindex="-1" value=""></div>
